examples/invalid/invalid_escape.jasn
// Invalid escape sequence
{
  bad_escape: "invalid \x escape"
}
